# chrono_simplex

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SETUP.md  main.py  pyproject.toml
chrono_simplex/: __init__.py  formatter.py  logging_setup.py  timer.py
